<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_margin="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main">

    <TableRow>
        <TextView
            android:textSize="16sp"
            android:id="@+id/computer_id_tv_label"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/computer_id_tv_text"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>
        <TextView
            android:textSize="16sp"
            android:id="@+id/computer_id_tv"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>
    </TableRow>

    <TableRow>
        <TextView
            android:textSize="12sp"
            android:id="@+id/motherboard_man_tv_label"
            android:layout_width="0dp"
            android:textColor="@color/gray"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/motherboard_man_tv_text"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>
        <TextView
            android:textSize="12sp"
            android:id="@+id/motherboard_man_tv"
            android:layout_width="0dp"
            android:textColor="@color/gray"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>
    </TableRow>

    <TableRow>
        <TextView
            android:singleLine="false"
            android:textSize="12sp"
            android:textColor="@color/gray"
            android:id="@+id/videocard_man_tv_label"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/videocard_man_tv_text"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>
        <TextView
            android:singleLine="false"
            android:textSize="12sp"
            android:textColor="@color/gray"
            android:id="@+id/videocard_man_tv"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>
    </TableRow>

    <TableRow>
        <TextView
            android:singleLine="false"
            android:textSize="12sp"
            android:textColor="@color/gray"
            android:id="@+id/ram_tv_label"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/ram_tv_text"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>
        <TextView
            android:singleLine="false"
            android:textSize="12sp"
            android:textColor="@color/gray"
            android:id="@+id/ram_tv"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>
    </TableRow>

    <TableRow>
        <TextView
            android:singleLine="false"
            android:textColor="@color/gray"
            android:textSize="12sp"
            android:id="@+id/manufacture_date_tv_label"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/manufacture_date_tv_text"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>
        <TextView
            android:layout_gravity="center"
            android:singleLine="false"
            android:textColor="@color/gray"
            android:textSize="12sp"
            android:id="@+id/manufacture_date_tv"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>
    </TableRow>

    <TableRow>
        <TextView
            android:singleLine="false"
            android:textColor="@color/gray"
            android:textSize="12sp"
            android:id="@+id/monitor_man_tv_label"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/monitor_man_tv_text"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>
        <TextView
            android:layout_gravity="center"
            android:singleLine="false"
            android:textColor="@color/gray"
            android:textSize="12sp"
            android:id="@+id/monitor_man_tv"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>
    </TableRow>
</TableLayout>